fix: delete modal wrap and size, and add btn-link class, fix view client page style

--- a/assets/scss/components/_button.scss
+++ b/assets/scss/components/_button.scss
@@ -1,6 +1,6 @@
 /* Styles de base pour tous les boutons */
 .btn-base {
-  @apply inline-flex items-center justify-center rounded-md border shadow-sm space-x-2 focus:outline-none focus:ring-2 focus:ring-offset-2;
+  @apply inline-flex items-center justify-center rounded-md border shadow-sm space-x-2 focus:outline-none focus:ring-2 focus:ring-offset-2 whitespace-nowrap;
 }
 
 /* Styles spécifiques pour chaque taille de bouton */
@@ -47,4 +47,8 @@
 
 .btn-icon {
   @apply inline-flex items-center justify-center rounded-full text-xl text-gray-600 p-2 hover:bg-primary-200/30 hover:text-primary-600;
+}
+
+.btn-link {
+  @apply inline-flex items-center justify-center rounded-md text-sm text-gray-600 hover:text-primary-600;
 }
